--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   },
   "scripts": {
     "start": "node server.js"
-  }
+  },
+  "name": "fluxo2",
+  "version": "1.0.0",
+  "main": "server.js"
 }
